--- a/app/src/main/res/layout/fragment_sports_event.xml
+++ b/app/src/main/res/layout/fragment_sports_event.xml
@@ -22,17 +22,17 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" />
 
-        <ImageButton
-            android:id="@+id/publish"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_weight="1"
-            android:textColor="@color/white"
-            android:src="@drawable/publish"
-            android:background="@drawable/shape_round_gradient_button"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+        <!--<ImageButton-->
+            <!--android:id="@+id/publish"-->
+            <!--android:layout_width="64dp"-->
+            <!--android:layout_height="64dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:src="@drawable/publish"-->
+            <!--android:background="@drawable/shape_round_gradient_button"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_alignParentEnd="true" />-->
     </RelativeLayout>
 
 
