--- a/app/src/main/res/layout/item_dynamic_fragment_head.xml
+++ b/app/src/main/res/layout/item_dynamic_fragment_head.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@drawable/mybackground"
     >
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,17 +11,26 @@
         android:orientation="horizontal"
         >
 
-        <TextView
-            android:id="@+id/title"
+
+        <Spinner
+           android:layout_marginLeft="120px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="运动圈"
-            android:textSize="18dp"
+            android:id="@+id/myspinner"
+            android:gravity="center"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:entries="@array/spingarr"
             />
-
-
+        <ImageView
+            android:id="@+id/publish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="12dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/publish"
+            />
     </RelativeLayout>
 
 </LinearLayout>
